fixed: filenames for divert where added to "divert" not to "divert.files"

--- a/src/usr/share/hsh/Makefile
+++ b/src/usr/share/hsh/Makefile
@@ -97,7 +97,7 @@ $(HSHPOOLDIR):
 	for f in $$files; do \
 		if [ -e "$$f" ]; then \
 			if [ `dpkg -S $$f 2>/dev/null | egrep -v '^$*' -c` -gt 0 ]; then\
-				echo "$$f" >> $$df; \
+				echo "$$f" >> $$df.files; \
 			fi; \
 		fi; \
 	done; \
