renamed vars, added HSHDEST var

--- a/src/usr/share/hsh/Makefile
+++ b/src/usr/share/hsh/Makefile
@@ -2,12 +2,19 @@ HSHLOCALCFG ?= Makefile.config
 
 -include $(HSHLOCALCFG)
 
-HSHDIR ?= src
+HSHROOT ?= src
 HSHPOOLDIR ?= ""
 HSHPTLDIR ?= tpl
-HSHDIRS ?= $(shell find $(HSHDIR) -maxdepth 1 -mindepth 1 -type d -exec basename '{}' \;)
+HSHPACKETS ?= $(shell find $(HSHROOT) -maxdepth 1 -mindepth 1 -type d -exec basename '{}' \;)
 HSHMODIFIED ?= 0
 HSHCOLOR ?= 1
+
+ifeq ($(HSHPOOLDIR), "")
+HSHDEST ?= $(HSHROOT)
+else
+HSHDEST ?= $(HSHPOOLDIR)
+endif
+
 
 ifeq ($(HSHCOLOR), 1)
 HSHCOLORPKT ?= \033[0;32m
@@ -15,9 +22,10 @@ HSHCOLORMSG ?= \033[0;33m
 HSHCOLORRST = \033[00m
 endif
 
-SRC := $(HSHDIRS:%=$(HSHDIR)/%)
+SRC := $(HSHPACKETS:%=$(HSHROOT)/%)
 PWD := $(shell pwd)
 
+.PHONY: all opts
 .PHONY: all %/discard %/pack %/set-version %/set-branch %/check-modified %/divert %/divert-files
 .PHONY: status %/status
 .PHONY: diff %/diff
@@ -27,56 +35,61 @@ PWD := $(shell pwd)
 .PRECIOUS: $(SRC:%=%/src/DEBIAN/postrm) $(SRC:%=%/src/DEBIAN/preinst)
 .PRECIOUS: $(HSHPOOLDIR) $(HSHPOOLDIR)/Packages $(HSHPOOLDIR)/Packages.bz2
 
-all: $(HSHDIRS:%=%/discard)
+all: $(HSHPACKETS:%=%/discard)
 	@if [ -n $(HSHPOOLDIR) ]; then \
 		echo "\t"'$(HSHCOLORPKT)$*: $(HSHCOLORMSG)updating packages file$(HSHCOLORRST)'; \
 		dpkg-scanpackages $(HSHPOOLDIR) > $(HSHPOOLDIR)/Packages; \
 		bzip2 -kf $(HSHPOOLDIR)/Packages; \
 	fi
 
-status: $(HSHDIRS:%=%/status)
+status: $(HSHPACKETS:%=%/status)
 
-diff: $(HSHDIRS:%=%/diff)
+diff: $(HSHPACKETS:%=%/diff)
+
+opts:
+	@echo "pooldir: $(HSHPOOLDIR)"; \
+	echo "dir: $(HSHROOT)"; \
+	echo "packets: $(HSHPACKETS)"
 
 %/discard: %/pack
 	@echo "\t"'$(HSHCOLORPKT)$*: $(HSHCOLORMSG)discarding changes$(HSHCOLORRST)'; \
-	git --work-tree $(HSHDIR)/$* --git-dir $(HSHDIR)/$*/.git checkout -- src/DEBIAN/control; \
-	dd=$(HSHDIR)/$*/src/DEBIAN; \
+	git --work-tree $(HSHROOT)/$* --git-dir $(HSHROOT)/$*/.git checkout -- src/DEBIAN/control; \
+	dd=$(HSHROOT)/$*/src/DEBIAN; \
 	[ -e $$dd/preinst ] && rm $$dd/preinst; \
 	[ -e $$dd/postrm ] && rm $$dd/postrm; \
-	[ -e $(HSHDIR)/$*/divert.files ] && rm $(HSHDIR)/$*/divert.files; \
+	[ -e $(HSHROOT)/$*/divert.files ] && rm $(HSHROOT)/$*/divert.files; \
 	true
 
-%/pack: %/set-version $(HSHPOOLDIR)
+%/pack: %/set-version $(HSHPOOLDIR) $(HSHDEST)
 	@echo "\t"'$(HSHCOLORPKT)$*: $(HSHCOLORMSG)packing$(HSHCOLORRST)'; \
 	if [ -n $(HSHPOOLDIR) ]; then \
 		rm -f $(HSHPOOLDIR)/$*_*.deb; \
-		fakeroot sh -c "chown -R root:root $(HSHDIR)/$*/src;dpkg-deb -b $(HSHDIR)/$*/src $(HSHPOOLDIR)"; \
+		fakeroot sh -c "chown -R root:root $(HSHROOT)/$*/src;dpkg-deb -b $(HSHROOT)/$*/src $(HSHPOOLDIR)"; \
 	else \
 		rm -f $*_*.deb; \
-		fakeroot sh -c "chown -R root:root $(HSHDIR)/$*/src;dpkg-deb -b $(HSHDIR)/$*/src ."; \
+		fakeroot sh -c "chown -R root:root $(HSHROOT)/$*/src;dpkg-deb -b $(HSHROOT)/$*/src $(HSHDEST)"; \
 	fi
 
 $(HSHPOOLDIR):
 	@[ -n $(HSHPOOLDIR) ] \
-	&& echo "\t"'$(HSHCOLORPKT)$*: $(HSHCOLORMSG)creating pooldir $(HSHPOOLDIR)$(HSHCOLORRST)' \
+	&& echo "\t"'$(HSHCOLORPKT)$*: $(HSHCOLORMSG)creating dir $(HSHPOOLDIR)$(HSHCOLORRST)' \
 	&& mkdir -p $(HSHPOOLDIR); \
 	true
 
 %/set-version: %/divert
 	@echo "\t"'$(HSHCOLORPKT)$*: $(HSHCOLORMSG)setting version$(HSHCOLORRST)'; \
-	sed -i "s/^Version: {{git}}$$/Version: `git --work-tree $(HSHDIR)/$* --git-dir $(HSHDIR)/$*/.git describe --tags \
-	| sed 's/^[^0-9]*//'`/" $(HSHDIR)/$*/src/DEBIAN/control;
+	sed -i "s/^Version: {{git}}$$/Version: `git --work-tree $(HSHROOT)/$* --git-dir $(HSHROOT)/$*/.git describe --tags \
+	| sed 's/^[^0-9]*//'`/" $(HSHROOT)/$*/src/DEBIAN/control;
 
 %/divert: %/divert-files
-	@git="git --work-tree $(HSHDIR)/$* --git-dir $(HSHDIR)/$*/.git"; \
-	if [ -e "$(HSHDIR)/$*/divert.files" ]; then \
+	@git="git --work-tree $(HSHROOT)/$* --git-dir $(HSHROOT)/$*/.git"; \
+	if [ -e "$(HSHROOT)/$*/divert.files" ]; then \
 		echo "\t"'$(HSHCOLORPKT)$*: $(HSHCOLORMSG)creating DEBIAN/preinst|postrm$(HSHCOLORRST)'; \
 		for df in preinst postrm; do \
-			of="$(HSHDIR)/$*/src/DEBIAN/$$df"; \
+			of="$(HSHROOT)/$*/src/DEBIAN/$$df"; \
 			echo "#!/bin/sh\nset -e\n" > $$of; \
 			if [ "$$df" = "preinst" ]; then \
-				for f in `cat $(HSHDIR)/$*/divert.files`; do \
+				for f in `cat $(HSHROOT)/$*/divert.files`; do \
 					echo "mkdir -p /var/backups`dirname $$f`\n" >> $$of; \
 					echo "if [ \"\$$1\" = \"install\" ]; then" >> $$of;  \
 					echo "\tdpkg-divert --package $* --rename \\" >> $$of; \
@@ -84,7 +97,7 @@ $(HSHPOOLDIR):
 					echo "fi" >> $$of; \
 				done; \
 			elif [ "$$df" = "postrm" ]; then \
-				for f in `cat $(HSHDIR)/$*/divert.files`; do \
+				for f in `cat $(HSHROOT)/$*/divert.files`; do \
 					echo "if [ remove = \"\$$1\"" \
 						" -o abort-install = \"\$$1\"" \
 						" -o disappear = \"\$$1\" ]; then" >> $$of; \
@@ -99,18 +112,18 @@ $(HSHPOOLDIR):
 		echo "\t"'$(HSHCOLORPKT)$*: $(HSHCOLORMSG)removing DEBIAN/preinst|postrm$(HSHCOLORRST)'; \
 		for df in preinst postrm; do \
 			of="src/DEBIAN/$$df"; \
-			[ -e $$of ] && rm $(HSHDIR)/$*/$$of; \
+			[ -e $$of ] && rm $(HSHROOT)/$*/$$of; \
 		done; \
 	fi; \
 	true
 
 %/divert-files: %/check-modified
 	@echo "\t"'$(HSHCOLORPKT)$*: $(HSHCOLORMSG)diverting files$(HSHCOLORRST)'; \
-	git="git --work-tree $(HSHDIR)/$* --git-dir $(HSHDIR)/$*/.git"; \
-	df=$(HSHDIR)/$*/divert ;\
+	git="git --work-tree $(HSHROOT)/$* --git-dir $(HSHROOT)/$*/.git"; \
+	df=$(HSHROOT)/$*/divert ;\
 	[ -e $$df.files ] && rm $$df.files;\
 	[ -e $$df ] && cat $$df > $$df.files ;\
-	files=`find $(HSHDIR)/$*/src -type f | grep -v DEBIAN | sed 's/$(HSHDIR)\/$*\/src//'`; \
+	files=`find $(HSHROOT)/$*/src -type f | grep -v DEBIAN | sed 's/$(HSHROOT)\/$*\/src//'`; \
 	for f in $$files; do \
 		if [ -e "$$f" ]; then \
 			if [ `dpkg -S $$f 2>/dev/null | egrep -v '^$*' -c` -gt 0 ]; then\
@@ -122,26 +135,26 @@ $(HSHPOOLDIR):
 %/check-modified: %/set-branch
 	@if [ $(HSHMODIFIED) -eq 0 ]; then \
 		echo '$(HSHCOLORPKT)$*: $(HSHCOLORMSG)cheking repository modification$(HSHCOLORRST)'; \
-		if [ ! $$(git --work-tree $(HSHDIR)/$* --git-dir $(HSHDIR)/$*/.git status --porcelain | wc -l) -eq 0 ]; then \
+		if [ ! $$(git --work-tree $(HSHROOT)/$* --git-dir $(HSHROOT)/$*/.git status --porcelain | wc -l) -eq 0 ]; then \
 			echo "$*: modified"; >&2 \
 			exit 2; \
 		fi; \
 	fi
 
-%/set-branch: $(HSHDIR)/%/.git
+%/set-branch: $(HSHROOT)/%/.git
 	@echo "\t"'$(HSHCOLORPKT)$*: $(HSHCOLORMSG)setting branch to "debian"$(HSHCOLORRST)'; \
-	if [ $$(git --work-tree $(HSHDIR)/$* --git-dir $(HSHDIR)/$*/.git branch | wc -l) -eq 0 ]; then \
+	if [ $$(git --work-tree $(HSHROOT)/$* --git-dir $(HSHROOT)/$*/.git branch | wc -l) -eq 0 ]; then \
 		echo "$*: not initialized" >&2; \
 		exit 1; \
 	fi; \
-	git --work-tree $(HSHDIR)/$* --git-dir $(HSHDIR)/$*/.git checkout debian 2>&1; \
-	[ $$? -eq 1 ] && git --work-tree $(HSHDIR)/$* --git-dir $(HSHDIR)/$*/.git checkout -b debian 2>&1 && true; \
+	git --work-tree $(HSHROOT)/$* --git-dir $(HSHROOT)/$*/.git checkout debian 2>&1; \
+	[ $$? -eq 1 ] && git --work-tree $(HSHROOT)/$* --git-dir $(HSHROOT)/$*/.git checkout -b debian 2>&1 && true; \
 	true
 
-$(HSHDIR)/%/.git: $(HSHDIR)/%/src/DEBIAN/control
+$(HSHROOT)/%/.git: $(HSHROOT)/%/src/DEBIAN/control
 	@if [ ! -d $@ ]; then \
 		echo "\t"'$(HSHCOLORPKT)$*: $(HSHCOLORMSG)git init && first commit$(HSHCOLORRST)'; \
-		cd $(HSHDIR)/$* \
+		cd $(HSHROOT)/$* \
 		&& git init \
 		&& git add * \
 		&& git ci -m 'initial commit' \
@@ -149,7 +162,7 @@ $(HSHDIR)/%/.git: $(HSHDIR)/%/src/DEBIAN/control
 		&& cd $(PWD); \
 	fi
 
-$(HSHDIR)/%/src/DEBIAN/control: $(HSHDIR)/%/src/DEBIAN
+$(HSHROOT)/%/src/DEBIAN/control: $(HSHROOT)/%/src/DEBIAN
 	@if [ ! -e $@ ]; then \
 		echo "\t"'$(HSHCOLORPKT)$*: $(HSHCOLORMSG)setting DEBIAN/control$(HSHCOLORRST)'; \
 		sed "s/Package: {{name}}/Package: $*/" $(HSHPTLDIR)/DEBIAN/control \
@@ -157,26 +170,26 @@ $(HSHDIR)/%/src/DEBIAN/control: $(HSHDIR)/%/src/DEBIAN
 		| sed "s/Maintainer: {{maintainer}}/Maintainer: `git config --get user.name` <`git config --get user.email`>/" > $@; \
 	fi
 
-$(HSHDIR)/%/src/DEBIAN:
+$(HSHROOT)/%/src/DEBIAN:
 	@echo "\t"'$(HSHCOLORPKT)$*: $(HSHCOLORMSG)creating DEBIAN directory$(HSHCOLORRST)'; \
 	mkdir -p $@
 
 %/status:
 	@echo "\t"'$(HSHCOLORPKT)$*: $(HSHCOLORMSG)status$(HSHCOLORRST)'; \
-	msg=`git --work-tree $(HSHDIR)/$* --git-dir $(HSHDIR)/$*/.git status --porcelain`; \
+	msg=`git --work-tree $(HSHROOT)/$* --git-dir $(HSHROOT)/$*/.git status --porcelain`; \
 	[ -n "$$msg" ] && printf "$*:\n$$msg\n"; \
 	true
 
 %/diff:
 	@echo "\t"'$(HSHCOLORPKT)$*: $(HSHCOLORMSG)diff$(HSHCOLORRST)'; \
-	files=`find $(HSHDIR)/$*/src -type f | grep -v DEBIAN | sed "s/$(HSHDIR)\/$*\/src//"`; \
+	files=`find $(HSHROOT)/$*/src -type f | grep -v DEBIAN | sed "s/$(HSHROOT)\/$*\/src//"`; \
 	diff=""; \
 	for of in $$files; do \
 		msg=""; \
 		if [ -e "$$of" ]; then \
-			diff $$of $(HSHDIR)/$*/src/$$of > /dev/null; \
+			diff $$of $(HSHROOT)/$*/src/$$of > /dev/null; \
 			if [ $$? -eq 0 ]; then \
-			[ `git --work-tree $(HSHDIR)/$* --git-dir $(HSHDIR)/$*/.git status --porcelain -- src/$$of | wc -l` \
+			[ `git --work-tree $(HSHROOT)/$* --git-dir $(HSHROOT)/$*/.git status --porcelain -- src/$$of | wc -l` \
 					-eq 0 ] || msg="not commited"; \
 			else \
 				msg="changed"; \
