depends from file

--- a/src/DEBIAN/control
+++ b/src/DEBIAN/control
@@ -2,6 +2,6 @@ Package: hsh
 Version: {{git}}
 Architecture: all
 Maintainer: Ilya Ashchepkov <koctep@gmail.com>
-Depends: make, dpkg, fakeroot, git, bzip2, dpkg-dev, coreutils, sed
+Depends: {{depends}}
 Priority: optional
 Description: hsh
