--- a/src/usr/share/hsh/tpl/DEBIAN/control
+++ b/src/usr/share/hsh/tpl/DEBIAN/control
@@ -2,6 +2,6 @@ Package: {{name}}
 Version: {{git}}
 Architecture: all
 Maintainer: {{maintainer}}
-Depends:
+Depends: {{depends}}
 Priority: optional
 Description: {{description}}
